@startuml
'https://plantuml.com/class-diagram

abstract class MotorDrive {
  -status
  -startTick
  -endTick
  #enforceLimits()
  #toStart()
  #toEnd()
}
interface ExMotor
interface Action {
  run()
}
set separator none
class MotorDrive.SetPower
class MotorDrive.ToPosition
class MotorDrive.Limits

Action <|-- MotorDrive.SetPower
Action <|-- MotorDrive.ToPosition
Action <|-- MotorDrive.Limits
MotorDrive - ExMotor : uses >

@enduml